feat: Update category with id
